1998-12-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c (gtk_hex_destroy): make it gtk_hex_finalize().
	* *.c: minor bugfixes, change menu paths since accellabel
	behaviour has reverted, etc.
	
1998-12-23  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ghex.h: #define all menu paths used in code.
	* main.c (main): use #defines for menu paths.
	* callbacks.c (view_changed_cb): use #define for menu path.

1998-12-19  Herbert Valerio Riedel  <hvr@hvrlab.ml.org>

	* ui.c: (gpointer) -> GINT_TO_POINTER()

1998-12-17  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c, ghex.h (create_dialog_title): combines a format string
	and active document's name and sets them as title to
	a dialog window.
	* callbacks.[ch] (child_changed_cb) new callback, updates
	dialog titles as active document changes.
	* main.c (main): connect child_changed_cb to child_changed
	signal.
	
1998-12-17  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* callbacks.c (view_changed_cb): add accelerator labels
 	to menu paths. also fix group type item activation code
	to work in a cleaner way and respect possible tear off
	item.
	* main.c (main): add accelerator labels to menu paths.
	* gtkhex.[ch]: small fixes.
	
1998-12-13  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c, hex_document.c: fixed some cast warnings.
	* gtkhex.c: fixed size_allocate and size_request handlers.
	fixed positioning of hex and ascii view and display size
	recalculation.
	
1998-12-10  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* callbacks.c (about_destroy_cb): new callback. sets
	a pointer to the about dialog to NULL on its destruction.
	(about_cb): if the about dialog is already open, raise it
	instead of opening a new one.

1998-12-10  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c (main): fix arg parsing code. it actually works now.
	* ui.c, ghex.h (report_error, show_message): removed.
	* callbacks.c (customize_app_cb): use gnome-appbar instead of
	gtkstatusbar.